<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:mullvad="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/darkBlue"
             android:gravity="left">
    <TextView android:id="@+id/title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/settings_account"
              style="@style/SettingsCollapsedHeader" />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
        <FrameLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content">
            <net.mullvad.mullvadvpn.ui.widget.BackButton android:id="@+id/back"
                                                         android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         mullvad:text="@string/settings" />
            <TextView android:id="@+id/collapsed_title"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginHorizontal="4dp"
                      android:layout_gravity="center"
                      android:text="@string/settings_account"
                      style="@style/SettingsCollapsedHeader" />
        </FrameLayout>
        <net.mullvad.mullvadvpn.ui.widget.ListenableScrollView android:id="@+id/scroll_area"
                                                               android:layout_width="match_parent"
                                                               android:layout_height="match_parent"
                                                               android:fillViewport="true">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:layout_marginTop="2dp"
                          android:orientation="vertical">
                <TextView android:id="@+id/expanded_title"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="@dimen/half_vertical_space"
                          android:layout_marginHorizontal="@dimen/side_margin"
                          android:lines="1"
                          android:text="@string/settings_account"
                          style="@style/SettingsExpandedHeader" />
                <net.mullvad.mullvadvpn.ui.widget.InformationView android:id="@+id/device_name"
                                                                  android:layout_width="match_parent"
                                                                  android:layout_height="wrap_content"
                                                                  android:paddingHorizontal="@dimen/side_margin"
                                                                  android:paddingVertical="@dimen/half_vertical_space"
                                                                  mullvad:description="@string/device_name"
                                                                  mullvad:whenMissing="showSpinner" />
                <net.mullvad.mullvadvpn.ui.widget.CopyableInformationView android:id="@+id/account_number"
                                                                          android:layout_width="match_parent"
                                                                          android:layout_height="wrap_content"
                                                                          android:paddingHorizontal="@dimen/side_margin"
                                                                          android:paddingVertical="@dimen/half_vertical_space"
                                                                          mullvad:clipboardLabel="@string/mullvad_account_number"
                                                                          mullvad:copiedToast="@string/copied_mullvad_account_number"
                                                                          mullvad:description="@string/account_number"
                                                                          mullvad:whenMissing="showSpinner"
                                                                          android:descendantFocusability="afterDescendants" />
                <net.mullvad.mullvadvpn.ui.widget.InformationView android:id="@+id/account_expiry"
                                                                  android:layout_width="match_parent"
                                                                  android:layout_height="wrap_content"
                                                                  android:layout_marginBottom="@dimen/half_vertical_space"
                                                                  android:paddingHorizontal="@dimen/side_margin"
                                                                  android:paddingVertical="@dimen/half_vertical_space"
                                                                  mullvad:description="@string/paid_until"
                                                                  mullvad:whenMissing="showSpinner" />
                <Space android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="1" />
                <include layout="@layout/payment_buttons" />
                <net.mullvad.mullvadvpn.ui.widget.Button android:id="@+id/logout"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:layout_marginHorizontal="@dimen/side_margin"
                                                         android:layout_marginTop="@dimen/button_separation"
                                                         android:layout_marginBottom="@dimen/screen_vertical_margin"
                                                         mullvad:text="@string/log_out"
                                                         mullvad:buttonColor="red" />
            </LinearLayout>
        </net.mullvad.mullvadvpn.ui.widget.ListenableScrollView>
    </LinearLayout>
</FrameLayout>
