<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:mullvad="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:gravity="left">
    <TextView android:id="@+id/expanded_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="0"
              android:layout_marginLeft="@dimen/side_margin"
              android:layout_marginTop="2dp"
              android:layout_marginBottom="12dp"
              android:lines="1"
              android:text="@string/split_tunneling"
              style="@style/SettingsExpandedHeader" />
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="8dp"
              android:paddingHorizontal="@dimen/side_margin"
              android:text="@string/split_tunneling_description"
              android:textColor="@color/white"
              android:textSize="@dimen/text_small" />
    <net.mullvad.mullvadvpn.ui.widget.ToggleCell android:id="@+id/enabled"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:layout_marginTop="@dimen/vertical_space"
                                                 mullvad:text="@string/enable" />
    <LinearLayout android:id="@+id/exclude_applications"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/vertical_space"
                  android:paddingLeft="@dimen/cell_left_padding"
                  android:paddingRight="@dimen/cell_right_padding"
                  android:background="@drawable/cell_button_background"
                  android:visibility="gone"
                  android:gravity="center">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:paddingRight="@dimen/cell_inner_spacing"
                  android:paddingVertical="@dimen/cell_label_vertical_padding"
                  android:textColor="@color/white"
                  android:textSize="@dimen/text_medium"
                  android:textStyle="bold"
                  android:text="@string/exclude_applications" />
    </LinearLayout>
    <ProgressBar android:id="@+id/loading_spinner"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/vertical_space"
                 android:indeterminate="true"
                 android:indeterminateOnly="true"
                 android:indeterminateDuration="600"
                 android:indeterminateDrawable="@drawable/icon_spinner"
                 android:visibility="gone" />
</LinearLayout>
